# C_code_practice

./: README.md  Template Practic
CPP_Practice/Level_one/: Level_one.sln
CPP_Practice/Level_one/Level_one/: AddressBook.cpp  AddressBook.h  AddressBook_Test  AppUI.cpp  AppUI.h  Level_one.cpp  Level_one.vcxproj  Level_one.vcxproj.filters  contact.h  main.cpp
CPP_Practice/Level_three/animal/: CMakeLists.txt  CMakePresets.json  animal.sln  build_vs.bat
CPP_Practice/Level_three/animal/animal/: animal.cpp  animal.vcxproj
CPP_Practice/Level_three/animal/animal/x64/Debug/: animal.exe.recipe  animal.ilk  vc143.idb
CPP_Practice/Level_three/animal/animal/x64/Debug/animal.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  animal.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CPP_Practice/Level_three/animal/include/: ConsoleUI.h  IOUtil.h  animal.h  bird.h  cat.h  dog.h
CPP_Practice/Level_three/animal/src/: ConsoleUI.cpp  IOUtil.cpp  bird.cpp  cat.cpp  dog.cpp  main.cpp
CPP_Practice/Level_two/: Level_two.sln
Project_MyVector/MyVector/: MyVector.sln
Project_address_list/: 123.txt  Contact List .mmap  Description of Function.txt
Project_address_list/Address_list/: Address_list.sln  Address_list.vcxproj
Project_address_list/address_list/: address_list.sln
Project_address_list/main/: main.sln
Project_game_arry/: README.md
Project_game_arry/Project_game_arry/: Project_game_arry.sln  game.c  game_funcs.c
Project_mine_game/mine_game/: mine_game.sln
Project_template_practice/template_practice/: template_practice.sln
(+135 files in other folders)
